name:                heisenberg
version:             0.0.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/MichaelXavier/heisenberg#readme
license:             BSD3
license-file:        LICENSE
author:              Michael Xavier
maintainer:          michael@michaelxavier.net
copyright:           2015 Michael Xavier
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

flag lib-Werror
  default: False
  manual: True

library
  hs-source-dirs:      src
  exposed-modules:     Heisenberg
  build-depends:       base >= 4.7 && < 5
                     , enclosed-exceptions >= 1
                     , transformers
                     , clock >= 0.5.0.0
                     , text
                     , mwc-random
                     , monad-control
                     , lens < 5
                     , stm
  default-language:    Haskell2010

  if flag(lib-Werror)
    ghc-options: -Werror

  ghc-options: -Wall


test-suite test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main.hs
  build-depends:       base
                     , heisenberg
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

  if flag(lib-Werror)
    ghc-options: -Werror

  ghc-options: -Wall

source-repository head
  type:     git
  location: https://github.com/MichaelXavier/heisenberg
